# comdoc

./: .env.example  .gitignore  Dockerfile  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 0b36e9110e0d_add_guid_fields_to_file_compare.py  830ea5888a9d_initial.py
src/domain/: models.py  repositories.py  services.py
src/infrastructure/: database.py  dto.py  orm.py  repositories.py  services.py  web_api.py
