[tool.poetry]
name = "comdoc"
version = "0.1.0"
description = ""
authors = ["Aleksandr <gggols32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = {extras = ["standard"], version = "^0.32.1"}
python-dotenv = "^1.0.1"
alembic = "^1.14.0"
requests = "^2.32.3"
minio = "^7.2.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
